tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.error
run error: exit status 1
modulo: contract violation
  expected: integer?
  given: 35/2
  context...:
   /workspace/mochi/tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.rkt:39:2
   /workspace/mochi/tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.rkt:80:2: loop
   /workspace/mochi/tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.rkt:76:0
   /workspace/mochi/tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.rkt:108:0
   body of "/workspace/mochi/tests/rosetta/transpiler/Racket/carmichael-3-strong-pseudoprimes.rkt"
The following are Carmichael munbers for p1 <= 61:

p1     p2      p3     product
==     ==      ==     =======
